--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,5 @@ spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=example
-#spring.jpa.hibernate.ddl-auto=crete-drop
 spring.jpa.show-sql=true
-#MYSQL_DB_DRIVER_CLASS=com.mysql.jdbc.Driver
-#MYSQL_DB_URL=jdbc:mysql://localhost:3306/UserDB
-#MYSQL_DB_USERNAME=pankaj
-#MYSQL_DB_PASSWORD=pankaj123
+server.error.include-message=always
