api del, update:rocket:

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=example
 spring.jpa.show-sql=true
 server.error.include-message=always
+jwt.secret=employee
