--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name: employeeDB
     restart: always
     volumes:
-      - "./pkg/database/tableSql:/docker-entrypoint-initdb.d"
+      - "./db/pkg/database/tableSql:/docker-entrypoint-initdb.d"
     ports:
       - '3306:3306'
     environment:
